Fixed font on mobile

--- a/styles/media.css
+++ b/styles/media.css
@@ -3,7 +3,8 @@
 @media screen and (max-width: 480px) {
 
     body {
-        font-size: 16px;
+        font-family: 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+        font-size: 1rem;
     }
 
     h1,
